@@ -69,6 +69,7 @@
 #include "ap_mpm.h"
 #include "apr_thread_proc.h"
 #include "apr_strings.h"
+#include "apr_portable.h"
 #ifdef HAVE_PWD_H
 #include <pwd.h>
 #endif
@@ -85,6 +86,9 @@
 #endif
 #ifdef HAVE_STRINGS_H
 #include <strings.h>
+#endif
+#ifdef HAVE_SYS_SEM_H
+#include <sys/sem.h>
 #endif
 
 unixd_config_rec unixd_config;
@@ -371,5 +375,37 @@ AP_DECLARE(apr_status_t) ap_os_create_privileged_process(
 
     return ap_unix_create_privileged_process(newproc, progname, args, env,
                                               attr, ugid, p);
+}
+
+AP_DECLARE(apr_status_t) unixd_set_lock_perms(apr_lock_t *lock)
+{
+/* MPM shouldn't call us unless we're actually using a SysV sem;
+ * this is just to avoid compile issues on systems without that
+ * feature
+ */
+#if APR_HAS_SYSVSEM_SERIALIZE
+    apr_os_lock_t oslock;
+#if !APR_HAVE_UNION_SEMUN
+    union semun {
+        long val;
+        struct semid_ds *buf;
+        ushort *array;
+};
+#endif
+    union semun ick;
+    struct semid_ds buf;
+
+    if (!geteuid()) {
+        apr_os_lock_get(&oslock, lock);
+        buf.sem_perm.uid = unixd_config.user_id;
+        buf.sem_perm.gid = unixd_config.group_id;
+        buf.sem_perm.mode = 0600;
+        ick.buf = &buf;
+        if (semctl(oslock.crossproc, 0, IPC_SET, ick) < 0) {
+            return errno;
+        }
+    }
+#endif
+    return APR_SUCCESS;
 }
 
